chore: Modified semantic pr workflow
- Adding pull-requests read permissions and statuses write

--- a/.github/workflows/semantic-pr.yml
+++ b/.github/workflows/semantic-pr.yml
@@ -12,6 +12,9 @@ permissions:
 
 jobs:
   main:
+    permissions:
+      pull-requests: read
+      statuses: write
     name: Validate PR title
     runs-on: ubuntu-latest
     steps:
