chore: Add more type hints
This change also includes a `mypy` pre-commit hook, to validate type
hints on every commit.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,3 +2,8 @@
 line-length = 120
 [tool.isort]
 profile = "black"
+[tool.mypy]
+python_version = "3.11"
+[[tool.mypy.overrides]]
+module = "decouple"
+ignore_missing_imports = true
