--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,6 +21,10 @@ repos:
     rev: 5.12.0
     hooks:
     -   id: isort
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.5.0
+    hooks:
+    -   id: mypy
 -   repo: https://github.com/compilerla/conventional-pre-commit
     rev: v2.3.0
     hooks:
