chore!: refactor of Config class
- using [python-decouple](https://github.com/HBNetwork/python-decouple) to build the configuration from environment variables or config files (.env or .ini,
for example)
- deleting "--env" argument, because by default the python-decouple library search environment variables.
- now, after the "--cfg" argument we can pass the path to the config file
- and this library search for the variables in upper case, so the config.ini must have the variables in upper case.

--- a/Pipfile
+++ b/Pipfile
@@ -3,6 +3,7 @@ aiohttp = "~= 3.8"
 aiohttp-jinja2 = "~= 1.5"
 email-validator = "~= 2.0"
 Jinja2 = "~= 3.1"
+python-decouple = "~= 3.8"
 SQLAlchemy = "~= 2.0"
 uvloop = "~= 0.17"
 
