--- a/config.example.ini
+++ b/config.example.ini
@@ -1,11 +1,11 @@
-[DEFAULT]
-db_uri = sqlite:///database.db
-wallabag_host = https://wallabag.myserver.org
-client_id = 1_3o53gl30vhgk0c8ks4cocww08o84448osgo40wgw4gwkoo8skc
-client_secret = 636ocbqo978ckw0gsw4gcwwocg8044sco0w8w84cws48ggogs4
-domain = https://consumer.myserver.org
-smtp_from = wallabag@myserver.org
-smtp_host = myserver.org
-smtp_port = 587
-smtp_user = mail_user
-smtp_passwd = mail_pass
+[settings]
+DB_URI = sqlite:///database.db
+WALLABAG_HOST = https://wallabag.myserver.org
+CLIENT_ID = 1_3o53gl30vhgk0c8ks4cocww08o84448osgo40wgw4gwkoo8skc
+CLIENT_SECRET = 636ocbqo978ckw0gsw4gcwwocg8044sco0w8w84cws48ggogs4
+DOMAIN = https://consumer.myserver.org
+SMTP_FROM = wallabag@myserver.org
+SMTP_HOST = myserver.org
+SMTP_PORT = 587
+SMTP_USER = mail_user
+SMTP_PASSWD = mail_pass
