feat: Implemented configuration to set a default format for the TAG option.    - If the default format is not specified, the default value is "epub".    - Fixes #17

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - CLIENT_SECRET=2049390EXAMPLECLIENTSECR3Tkslgsa
       - SMTP_TLS=0
       - TAG=kindle
+      - DEFAULT_FORMAT=pdf
       - WALLABAG_HOST=http://mock-server:80
     volumes:
       - ./data:/data
