fix: adding LOG_LEVEL env. variable. Fixes not showing the DEBUG messages. By default the value is INFO, but the user can change it for DEBUG, ERROR, WARNING, etc.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - TAG=kindle
       - DEFAULT_FORMAT=pdf
       - WALLABAG_HOST=http://mock-server:80
+      - LOG_LEVEL=DEBUG
     volumes:
       - ./data:/data
     ports:
